spring boot3 mybits