@@ -2,12 +2,71 @@ apply plugin: "org.springframework.boot"
 apply plugin: "org.graalvm.buildtools.native"
 
 dependencies {
+//    implementation "com.baomidou:mybatis-plus-boot-starter:3.5.3.1"
+
+    implementation "org.springframework.boot:spring-boot-starter-web"
+    implementation "org.springframework.boot:spring-boot-starter-actuator"
+    implementation "org.springframework.boot:spring-boot-autoconfigure"
+
+    implementation "org.springframework.boot:spring-boot-starter-actuator"
+    implementation "org.springframework.boot:spring-boot-starter-aop"
+    implementation "org.springframework.boot:spring-boot-starter-json"
+    implementation "org.springframework.boot:spring-boot-starter-validation"
+
+    implementation "org.springframework.boot:spring-boot-starter-jdbc"
+
+    implementation "mysql:mysql-connector-java:8.0.33"
+
+    implementation "jakarta.persistence:jakarta.persistence-api:3.1.0"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
+
+    implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.2"
+
 }
 
 graalvmNative {
     binaries {
         main {
             sharedLibrary = false
+
+            buildArgs.add('--verbose')
+            buildArgs.add('--no-fallback')
+
+            buildArgs.add('--add-opens=java.base/java.nio=ALL-UNNAMED')
+            buildArgs.add('--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED')
+            buildArgs.add('--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED')
+
+            buildArgs.add('--trace-class-initialization=ch.qos.logback.classic.Logger')
+            buildArgs.add('--trace-class-initialization=java.net.Inet4Address')
+
+            buildArgs.add('--trace-object-instantiation=ch.qos.logback.core.AsyncAppenderBase$Worker')
+            buildArgs.add('--trace-object-instantiation=java.net.Inet4Address')
+
+            //buildArgs.add('--initialize-at-run-time=io.netty')
+            buildArgs.add('--initialize-at-run-time=io.netty.util.NetUtil')
+            //buildArgs.add('--initialize-at-run-time=java.net.Inet4Address')
+
+            buildArgs.add('--initialize-at-build-time=org.springframework.util.unit.DataSize')
+            buildArgs.add('--initialize-at-build-time=org.slf4j.LoggerFactory,ch.qos.logback')
+            buildArgs.add('--initialize-at-build-time=org.slf4j.MDC')
+            buildArgs.add('--initialize-at-build-time=ch.qos.logback.classic.Level')
+            buildArgs.add('--initialize-at-build-time=ch.qos.logback.classic.Logger')
+            buildArgs.add('--initialize-at-build-time=ch.qos.logback.core.util.StatusPrinter')
+            buildArgs.add('--initialize-at-build-time=ch.qos.logback.core.status.StatusBase')
+            buildArgs.add('--initialize-at-build-time=ch.qos.logback.core.status.InfoStatus')
+            buildArgs.add('--initialize-at-build-time=ch.qos.logback.core.spi.AppenderAttachableImpl')
+            buildArgs.add('--initialize-at-build-time=org.slf4j.LoggerFactory')
+            buildArgs.add('--initialize-at-build-time=ch.qos.logback.core.util.Loader')
+            buildArgs.add('--initialize-at-build-time=org.slf4j.impl.StaticLoggerBinder')
+            buildArgs.add('--initialize-at-build-time=ch.qos.logback.classic.spi.ThrowableProxy')
+            buildArgs.add('--initialize-at-build-time=ch.qos.logback.core.CoreConstants')
+//            buildArgs.add('--initialize-at-build-time=io.netty.channel.DefaultFileRegion')
+//            buildArgs.add('--initialize-at-build-time=io.netty.util.AbstractReferenceCounted')
+            buildArgs.add('--report-unsupported-elements-at-runtime')
+            buildArgs.add('--allow-incomplete-classpath')
+            buildArgs.add('-H:+ReportExceptionStackTraces')
+
+//            buildArgs.add('-H:ReflectionConfigurationFiles=./reflection-config.json')
         }
     }
 }
